--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -59,18 +59,18 @@
         <div class="partner givePadding ">
             <h3 class="text-center">合作夥伴</h3>
             <p class="text-center container" style="width:50% ;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates adipisci, ea eum quae unde numquam. Voluptatem mollitia, enim voluptatibus, odio nam quam illo tempore cumque eligendi sapiente vero, aspernatur nostrum.</p>
-            <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel" data-interval ="3000">
+            <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel" data-interval ="1000000">
                 <h4 class="text-center">COOPERATION</h4>
                 <p class="text-center">合作廠商</p>
                 <div class="carousel-inner ">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleControls1" data-slide-to="0" class="active"></li>
+                    <ol class="carousel-indicators carousel-caption" >
+                        <li data-target="#carouselExampleControls1" data-slide-to="0" class="active "></li>
                         <li data-target="#carouselExampleControls1" data-slide-to="1"></li>
                         <li data-target="#carouselExampleControls1" data-slide-to="2"></li>
                     </ol>
                     
 
-                    <div class="carousel-item active">
+                    <div class="carousel-item active ">
                         <div class="row">
                             <div class="col-md-2">
                                 <a href="#">
@@ -151,11 +151,11 @@
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls1" data-slide="prev">
+            <button class="carousel-control-prev mt-auto" type="button" data-target="#carouselExampleControls1" data-slide="prev" >
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-target="#carouselExampleControls1" data-slide="next">
+            <button class="carousel-control-next mt-auto" type="button" data-target="#carouselExampleControls1" data-slide="next" >
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </button>
