--- a/html/news.html
+++ b/html/news.html
@@ -21,38 +21,41 @@
         <!-- 最新消息 -->
         <div class="browserHeight">
             <div class="text-center height30">
-                <h1>WHAT'S NEW.</h1>
-                <h3>最新消息</h3>
+                <h1 class="indexh1">WHAT'S NEW.</h1>
+                <h3 class="indexh2">最新消息</h3>
             </div>
 
             <!-- 幻燈片 -->
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                
+
                 <!-- 輪播內容 -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row">
-                            <img src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg" class="height50 col-sm-6"
-                                alt="最新消息1">
-                            <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto natus quia amet ut
+                            <img src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg"
+                                class="height50 col-sm-6" alt="最新消息1">
+                            <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
+                                natus quia amet ut
                                 incidunt perspiciatis, dolorum sed accusamus fugiat at nulla perferendis temporibus
                                 adipisci quas in sequi. Molestiae, impedit assumenda!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <img src="http://farm4.staticflickr.com/3795/9269794168_3ac58fc15c_b.jpg" class="height50 col-sm-6"
-                                alt="最新消息2">
-                            <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto natus quia amet ut
+                            <img src="http://farm4.staticflickr.com/3795/9269794168_3ac58fc15c_b.jpg"
+                                class="height50 col-sm-6" alt="最新消息2">
+                            <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
+                                natus quia amet ut
                                 incidunt perspiciatis, dolorum sed accusamus fugiat at nulla perferendis temporibus
                                 adipisci quas in sequi. Molestiae, impedit assumenda!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <img src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_3266_19.jpg" class="height50 col-sm-6"
-                                alt="最新消息3">
-                            <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto natus quia amet ut
+                            <img src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_3266_19.jpg"
+                                class="height50 col-sm-6" alt="最新消息3">
+                            <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
+                                natus quia amet ut
                                 incidunt perspiciatis, dolorum sed accusamus fugiat at nulla perferendis temporibus
                                 adipisci quas in sequi. Molestiae, impedit assumenda!</p>
                         </div>
@@ -60,21 +63,24 @@
                 </div>
             </div>
 
-            <div class="height10" >
+            <div class="height10">
 
                 <!-- 輪播進度提示 -->
                 <div class="carousel-indicators">
-                    <button type="button" data-target="#carouselExampleIndicators" data-slide-to="0" class="active" aria-label="Slide 1"></button>
+                    <button type="button" data-target="#carouselExampleIndicators" data-slide-to="0" class="active"
+                        aria-label="Slide 1"></button>
                     <button type="button" data-target="#carouselExampleIndicators" data-slide-to="1"></button>
                     <button type="button" data-target="#carouselExampleIndicators" data-slide-to="2"></button>
                 </div>
 
                 <!-- 左右箭頭 -->
-                <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+                <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators"
+                    data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <!-- <span class="visually-hidden">Previous</span> -->
                 </button>
-                <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+                <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators"
+                    data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <!-- <span class="visually-hidden">Next</span> -->
                 </button>
@@ -84,19 +90,19 @@
         <!-- 產品新訊 -->
         <div>
             <div class="container-fluid height30 bg-secondary text-light d-flex align-items-center">
-                <h3 class="col-sm-5 align-items-center text-right">產品新訊</h3>
-                <p class="col-sm-7 align-items-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                <h2 class="col-xl-5 align-items-center text-right indexh2">產品新訊</h2>
+                <p class="col-xl-7 align-items-center indexp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
                     neque porro ad ducimus adipisci iusto
                     doloribus explicabo maxime voluptas corrupti itaque molestiae, at recusandae reprehenderit ex aut ab
                     provident eum.</p>
             </div>
 
             <div class="row height50">
-                <div class="col-sm-6">
+                <div class="col-xl-6">
                     <video src=""></video>
                     <!-- 主打產品影片 -->
                 </div>
-                <div class="col-sm-6">
+                <div class="col-xl-6">
                     <h3>主打產品123</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem at veritatis eos commodi et
                         illo molestiae enim quidem, odio maiores non quas dicta distinctio harum esse, dolorum soluta
@@ -105,7 +111,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-4 card bg-secondary text-light">
+                <div class="col-xl-4 card bg-secondary text-light">
                     <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="1">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
@@ -116,7 +122,7 @@
                             laboriosam fuga vitae!</p>
                     </div>
                 </div>
-                <div class="col-sm-4 card bg-secondary text-light">
+                <div class="col-xl-4 card bg-secondary text-light">
                     <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="2">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
@@ -127,7 +133,7 @@
                             laboriosam fuga vitae!</p>
                     </div>
                 </div>
-                <div class="col-sm-4 card bg-secondary text-light">
+                <div class="col-xl-4 card bg-secondary text-light">
                     <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="3">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
@@ -144,10 +150,8 @@
         <!-- 服務項目 -->
         <div class="browserHeight">
             <div class="text-center height30">
-                <h3>服務項目</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor neque porro ad ducimus adipisci iusto
-                    doloribus explicabo maxime voluptas corrupti itaque molestiae, at recusandae reprehenderit ex aut ab
-                    provident eum.</p>
+                <h2 class = "indexh2">服務項目</h2>
+                <p  class = "indexp">凱茂資訊，能依客戶實際需求規劃最適合的解決方案，如主機虛擬化、郵件伺服器、備份備援、雲端運算、端點管理、網通架構、資訊安全等規劃......</p>
             </div>
 
             <div class="row">
@@ -201,10 +205,8 @@
         <!-- 客戶個案 -->
         <div class="browserHeight">
             <div class="text-center height30">
-                <h3>客戶個案</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor neque porro ad ducimus adipisci iusto
-                    doloribus explicabo maxime voluptas corrupti itaque molestiae, at recusandae reprehenderit ex aut ab
-                    provident eum.</p>
+                <h2 class ="indexh2">客戶個案</h2>
+                <p  class ="indexp"> 凱茂業界深耕多年，具備專業且豐富建置經驗， 熟悉原廠及代理通路最新，且能確切執行並解決客戶需求之能力。提供客戶完整解決方案，無論是何種產業別，均能量身規劃，滿足各種跨整合需求。</p>
             </div>
 
             <div class="row height30">
